# hivemind

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  README.md  package.json  pyproject.toml
config/: local_workers.example.json  providers.example.yaml
data/: README.md
docs/: ADAPTIVE_ADVERSARIAL_CHAIR.md  AGENT_WORKLOG.md  ARCHITECTURE.md  CAPABILITYOS_FROM_HIVE_SPRINT.md  CHAIR_RUNTIME_SPEC.md  CLAUDE_SHARED_VISION.md  EXPORT_PARSERS.md  GAP_CLOSURE_IMPLEMENTATION.md  GOAL.md  HANDOFF.json  HIVE_MIND.md  HIVE_MIND_GAPS.md  HIVE_PRODUCT_EVALUATION.md  HIVE_PUBLIC_ALPHA.md  HIVE_TUI.md  HIVE_WORKING_METHOD.md  LEDGER_PROTOCOL.md  LOCAL_BACKEND_CONTRACT.md  LOCAL_LLM_INVENTORY.md  LOCAL_LLM_WORKERS.md  LOCAL_MODEL_BENCHMARK.md  LOCAL_MODEL_USAGE_GOEN.md  LOWERCASE_SOURCE_GRAPH.md  MEMORYOS_MVP.md  MYWORLD_IDEA_EXCERPTS.md  NORTHSTAR.md  OPEN_MODEL_PROVIDER_SURVEY.md  OPERATOR_METHOD_PROFILE.md  PROVIDER_HARNESS_GUIDE.md  PROVIDER_MODELS.md  PUBLIC_ALPHA_GATE.md  PUBLISHING_GATE.md  RADAR_GAP_TRIAGE.md  RADAR_REVIEW.md  README.md  REPO_SPLIT.md  ROADMAP.md  ROUTE.md  RUN_ARTIFACT_PROTOCOL.md  SOURCE_LINKS.md  (+28 more)
hivemind/: __init__.py  aios_feedback.py  aios_packet_runner.py  aios_runtime.py  arrival_pack.py  capability_bridge.py  cli.py  cloud_isolation.py  dag_state.py  debate_status.py  evaluation.py  extract.py  fanout_scheduler.py  flow_runtime.py  goal.py  handoff_import.py  harness.py  hive.py  importers.py  inspect_run.py  live.py  local_workers.py  memory_bridge.py  permission_preflight.py  plan_dag.py  protocol.py  provider_failure.py  (+23 more)
(+156 files in other folders)
