[project]
name = "hive-mind"
version = "0.1.0"
description = "Hive Mind swarm harness for provider CLIs and local LLM workers"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0.3"]

[project.scripts]
hivemind = "hivemind.hive:main"
hive = "hivemind.hive:main"

[tool.setuptools.packages.find]
include = ["hivemind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
